--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -1,10 +1,11 @@
 
-<div class="main-wrap" ng-controller="landingController">
+<div class="landing" ng-controller="landingController">
     <h1>Talviolympicks</h1>
     <h3>jeah: {{title}}</h3>
 
     <div class="countdown"></div>
 </div>
+
 
 
 <script>
