--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,16 +1,22 @@
-body {
-  background-color: #000;
-  color: #FFF; }
+.bg {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url(../img/bgimg.jpg); }
 
 .main-wrap {
+  z-index: 2;
   width: 100%;
   max-width: 960px;
   display: block;
-  margin: 0 auto; }
+  position: relative;
+  margin: 50px auto; }
 
 .countdown {
   margin: 20px auto;
   display: block;
   max-width: 620px; }
-  .countdown .flip-clock-label {
-    color: #FFF; }
