--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,27 +2,41 @@
 $black: #000;
 $white: #FFF;
 
-body {
-	background-color: $black;
-	color: $white;
+
+.bg { // Wrap for the picture background
+    z-index: 1;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background-size: cover;
+    background-image: url(../img/bgimg.jpg);
 }
 
-.main-wrap {
-	width: 100%;
-	max-width: 960px;
-	display: block;
 
-	margin: 0 auto;
+.main-wrap {
+    z-index: 2;
+
+    width: 100%;
+    max-width: 960px;
+
+    display: block;
+    position: relative;
+
+    margin: 50px auto;
 }
 
 
 
 .countdown {
-	margin: 20px auto;
-	display: block;
-	max-width: 620px;
+    margin: 20px auto;
+    display: block;
+    max-width: 620px;
 
-	.flip-clock-label {
-		color: $white;
-	}
+    .flip-clock-label {
+        // color: $white;
+    }
 }
