Add Logo to the landing page, separate styles to separate files

--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -1,7 +1,13 @@
 
 <div class="landing" ng-controller="landingController" ng-init="init()">
-    <h1>Talviolympicks</h1>
-    <h3>jeah: {{title}}</h3>
+    <div class="logo-wrap">
+        <div class="logo"></div>
+
+        <div class="info">
+            <div class="logo-text"></div>
+            <p>Bla, bla, blablablablbal bla. Korkeammalle.</p>
+        </div>
+    </div>
 
     <div class="countdown"></div>
 </div>
