--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,16 @@
+/*
+    CLEARFIX HACK
+    (http://nicolasgallagher.com/micro-clearfix-hack/)
+*/
+.clearfix:before, .logo-wrap:before, .clearfix:after, .logo-wrap:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */ }
+
+.clearfix:after, .logo-wrap:after {
+  clear: both; }
+
 .bg {
   z-index: 1;
   position: absolute;
@@ -15,6 +28,37 @@
   display: block;
   position: relative;
   margin: 50px auto; }
+
+.logo-wrap {
+  display: block;
+  width: 100%;
+  border-radius: 3px;
+  box-shadow: 30px 30px 90px 3px rgba(0, 0, 0, 0.75);
+  background-color: #3D218F;
+  color: #FFF; }
+  .logo-wrap .logo {
+    height: 300px;
+    width: 48%;
+    float: left;
+    background-image: url(../img/logo-full.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain; }
+  .logo-wrap .info {
+    margin: 20px auto;
+    float: left;
+    width: 48%;
+    border-left: 2px solid #FFF; }
+    .logo-wrap .info .logo-text {
+      margin-top: 20px;
+      width: 100%;
+      height: 200px;
+      background-image: url(../img/logo-text.png);
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: contain; }
+    .logo-wrap .info p {
+      text-align: right; }
 
 .countdown {
   margin: 20px auto;
