--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -10,6 +10,13 @@
     </div>
 
     <div class="countdown"></div>
+
+
+    <div class="instagame-wrap">
+        <a class="ig-img" href="{{image.link}}" target="_blank" ng-repeat="image in images">
+            <img src="{{image.thumbnailUrl}}" />
+        </a>
+    </div>
 </div>
 
 
