--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -11,12 +11,12 @@
 
     <div class="countdown"></div>
 
-
-    <div class="instagame-wrap">
+    <div class="ig-wrap">
         <a class="ig-img" href="{{image.link}}" target="_blank" ng-repeat="image in images">
             <img src="{{image.thumbnailUrl}}" />
         </a>
     </div>
+
 </div>
 
 
