--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -4,8 +4,8 @@
     display: block;
     width: 100%;
     border-radius: 3px;
-    box-shadow: 30px 30px 90px 3px rgba(0,0,0,0.75);
 
+    box-shadow: 30px 30px 90px 3px rgba(0,0,0,0.75);
     background-color: $blue;
     color: $white;
 
@@ -50,11 +50,41 @@
 
 
 .countdown {
-    margin: 20px auto;
+    margin: 50px auto 30px auto;
     display: block;
     max-width: 620px;
 
     .flip-clock-label {
-        // color: $white;
+        font-size: 15px;
+        color: $white;
+    }
+}
+
+
+.ig-wrap {
+    @extend .clearfix;
+
+     .ig-img {
+        float: left;
+        width: 15%;
+        box-shadow: 10px 10px 10px 3px rgba(0,0,0,0.4);
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+
+        margin: 2% 2% 0 0;
+
+        &:nth-child(6), &:nth-child(12) { // the last of both rows
+            margin-right: 0;
+        }
+
+        // Mouseover popup efect
+        transition: all 0.2s ease-in-out; 
+        &:hover { 
+            transform: scale(1.1);
+            box-shadow: 10px 10px 10px 3px rgba(0,0,0,0.75);
+        }
     }
 }
