--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -10,3 +10,22 @@ $yellow: #EFAE2E;
 $purple: #DC0679;
 $red: #A82D20;
 
+
+/* Palette URL: http://paletton.com/#uid=54n0u0kYpnmSxDVWIsGZ6hZZObt */
+$color-primary-0: #2E017F;	/* Main Primary color aka $blue */
+$color-primary-1: #4905C5;
+$color-primary-2: #38029C;
+$color-primary-3: #230162;
+$color-primary-4: #16003E;
+
+$color-secondary-1-0: #65007B;	/* Main Secondary color (1) */
+$color-secondary-1-1: #9F01C0;
+$color-secondary-1-2: #7C0197;
+$color-secondary-1-3: #4E005E;
+$color-secondary-1-4: #32003C;
+
+$color-secondary-2-0: #011380;	/* Main Secondary color (2) */
+$color-secondary-2-1: #0721C5;
+$color-secondary-2-2: #03189D;
+$color-secondary-2-3: #010E62;
+$color-secondary-2-4: #00093F;
