--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,9 +2,11 @@
 @import 'colors';
 @import 'clearfix';
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 body {
-    background-color: $black;
+    background-color: $color-primary-3;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .bg { // Wrap for the picture background
@@ -18,6 +20,7 @@ body {
 
     background-size: cover;
     background-image: url(../img/bgimg.jpg);
+    background-attachment: fixed;
 }
 
 
