--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -5,7 +5,7 @@
 
         <div class="info">
             <div class="logo-text"></div>
-            <p>Bla, bla, blablablablbal bla. Korkeammalle.</p>
+            <p>Enemmän, Pidempään, Rumemmin.</p>
         </div>
     </div>
 
@@ -24,7 +24,7 @@
         </div>
 
         <ul class="tags">
-            <li ng-repeat="(tag, count) in tags">{{tag}} <span class="count">{{count}}</span></li>
+            <li ng-repeat="(tag, count) in tags"><span class="tag">{{tag}}</span> <span class="count">{{count}}</span></li>
         </ul>
     </div>
 
