--- a/app/css/main.css
+++ b/app/css/main.css
@@ -16,20 +16,12 @@
 .clearfix:after, .logo-wrap:after, .ig-wrap:after, .ig-info:after, .ig-info .likes:after {
   clear: both; }
 
-body {
-  background-color: #230162;
-  font-family: 'Open Sans', sans-serif; }
+html {
+  background: url(../img/bgimg.jpg) no-repeat center center fixed;
+  background-size: cover; }
 
-.bg {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-image: url(../img/bgimg.jpg);
-  background-attachment: fixed; }
+body {
+  font-family: 'Open Sans', sans-serif; }
 
 .main-wrap {
   z-index: 2;
