--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,26 +1,17 @@
 
 @import 'colors';
 @import 'clearfix';
+@import 'viewports';
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
-body {
-    background-color: $color-primary-3;
-    font-family: 'Open Sans', sans-serif;
+html {
+    background: url(../img/bgimg.jpg) no-repeat center center fixed;
+    background-size: cover;
 }
 
-.bg { // Wrap for the picture background
-    z-index: 1;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    background-size: cover;
-    background-image: url(../img/bgimg.jpg);
-    background-attachment: fixed;
+body {
+    font-family: 'Open Sans', sans-serif;
 }
 
 
