--- a/app/css/main.css
+++ b/app/css/main.css
@@ -66,10 +66,37 @@ body {
 .countdown {
   margin: 50px auto 30px auto;
   display: block;
-  max-width: 620px; }
+  max-width: 620px;
+  width: 100%; }
   .countdown .flip-clock-label {
     font-size: 15px;
     color: #FFF; }
+
+@media (min-width: 481px) and (max-width: 768px) {
+  .countdown {
+    margin-left: 20%;
+    margin-bottom: 20px;
+    width: 130%;
+    -webkit-transform-origin: 0 0;
+        -ms-transform-origin: 0 0;
+            transform-origin: 0 0;
+    -webkit-transform: scale(0.7);
+        -ms-transform: scale(0.7);
+            transform: scale(0.7); }
+ }
+
+@media (max-width: 480px) {
+  .countdown {
+    margin-bottom: 10px;
+    margin-left: 10%;
+    width: 200%;
+    -webkit-transform-origin: 0 0;
+        -ms-transform-origin: 0 0;
+            transform-origin: 0 0;
+    -webkit-transform: scale(0.45);
+        -ms-transform: scale(0.45);
+            transform: scale(0.45); }
+ }
 
 .ig-wrap .ig-img {
   float: left;
