--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -55,10 +55,30 @@
     margin: 50px auto 30px auto;
     display: block;
     max-width: 620px;
+    width: 100%;
 
     .flip-clock-label {
         font-size: 15px;
         color: $white;
+    }
+}
+
+@include viewports(small) { 
+    .countdown {
+        margin-left: 20%;
+        margin-bottom: 20px;
+        width: 130%;
+        transform-origin: 0 0;
+        transform: scale(.7);
+    }
+}
+@include viewports(tiny) { 
+    .countdown {
+        margin-bottom: 10px;
+        margin-left: 10%;
+        width: 200%;
+        transform-origin: 0 0;
+        transform: scale(.45);
     }
 }
 
