Use ng-src so there won't be unnecessary 404 before Angular is loaded

--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -13,7 +13,7 @@
 
     <div class="ig-wrap">
         <a class="ig-img" href="{{image.link}}" target="_blank" ng-repeat="image in images">
-            <img src="{{image.thumbnailUrl}}" />
+            <img ng-src="{{image.thumbnailUrl}}" />
         </a>
     </div>
 
