Update colors to use the 2016 color set

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -1,12 +1,11 @@
-
 $black: #000;
 $white: #FFF;
 
 
-//http://www.colourlovers.com/palette/3236019/Sochi_Olympics_2014
-$blue: #3D218F;
+// 2015: http://www.colourlovers.com/palette/3236019/Sochi_Olympics_2014
+// 2016: http://www.colourlovers.com/palette/1329120/If_We_Should_Meet
+$blue: #027B7F;
 $green: #069344;
 $yellow: #EFAE2E;
-$purple: #DC0679;
+$purple: #BF1E62;
 $red: #A82D20;
-
