--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,13 +1,14 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
-/* Palette URL: http://paletton.com/#uid=54n0u0kYpnmSxDVWIsGZ6hZZObt */
-/* Main Primary color aka $blue */
-/* Main Secondary color (1) */
-/* Main Secondary color (2) */
 /*
     CLEARFIX HACK
     (http://nicolasgallagher.com/micro-clearfix-hack/)
 */
-.clearfix:before, .logo-wrap:before, .ig-wrap:before, .ig-info:before, .ig-info .likes:before, .clearfix:after, .logo-wrap:after, .ig-wrap:after, .ig-info:after, .ig-info .likes:after {
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+.clearfix:before, .logo-wrap:before, .ig-wrap:before, .ig-info:before, .ig-info .likes:before,
+.clearfix:after,
+.logo-wrap:after,
+.ig-wrap:after,
+.ig-info:after,
+.ig-info .likes:after {
   content: " ";
   /* 1 */
   display: table;
@@ -36,7 +37,7 @@ body {
   width: 100%;
   border-radius: 3px;
   box-shadow: 30px 30px 90px 3px rgba(0, 0, 0, 0.75);
-  background-color: #3D218F;
+  background-color: #027B7F;
   color: #FFF; }
 
 .logo-wrap .logo {
@@ -47,6 +48,7 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain; }
+
 .logo-wrap .info {
   margin: 20px auto;
   float: left;
@@ -78,12 +80,9 @@ body {
     margin-bottom: 20px;
     width: 130%;
     -webkit-transform-origin: 0 0;
-        -ms-transform-origin: 0 0;
             transform-origin: 0 0;
     -webkit-transform: scale(0.7);
-        -ms-transform: scale(0.7);
-            transform: scale(0.7); }
- }
+            transform: scale(0.7); } }
 
 @media (max-width: 480px) {
   .countdown {
@@ -91,12 +90,9 @@ body {
     margin-left: 10%;
     width: 200%;
     -webkit-transform-origin: 0 0;
-        -ms-transform-origin: 0 0;
             transform-origin: 0 0;
     -webkit-transform: scale(0.45);
-        -ms-transform: scale(0.45);
-            transform: scale(0.45); }
- }
+            transform: scale(0.45); } }
 
 .ig-wrap .ig-img {
   float: left;
@@ -104,7 +100,7 @@ body {
   box-shadow: 10px 10px 10px 3px rgba(0, 0, 0, 0.4);
   margin: 2% 2% 0 0;
   -webkit-transition: all 0.2s ease-in-out;
-          transition: all 0.2s ease-in-out; }
+  transition: all 0.2s ease-in-out; }
   .ig-wrap .ig-img img {
     width: 100%;
     height: 100%; }
@@ -112,7 +108,6 @@ body {
     margin-right: 0; }
   .ig-wrap .ig-img:hover {
     -webkit-transform: scale(1.1);
-        -ms-transform: scale(1.1);
             transform: scale(1.1);
     box-shadow: 10px 10px 10px 3px rgba(0, 0, 0, 0.75); }
 
@@ -155,7 +150,7 @@ body {
       padding: 10px 10px 10px 40px;
       margin: 0 10px 10px 0;
       border-radius: 3px;
-      background-color: #65007B;
+      background-color: #A82D20;
       background-image: url(../img/hashtag.png);
       background-position: 5px center;
       background-repeat: no-repeat;
@@ -166,6 +161,6 @@ body {
         font-size: 20px;
         border-radius: 0 3px 3px 0;
         height: 100%;
-        background-color: #7C0197;
+        background-color: #7d2218;
         padding: 12px;
         margin: -12px -12px 0 0; }
