--- a/app/styles/_schedule.scss
+++ b/app/styles/_schedule.scss
@@ -77,7 +77,7 @@
             font-size: 30px;
 
             @include viewports(up-to small) {
-                padding: 10px 15px;
+                padding: 10px 20px 10px 10px;
                 font-size: 20px;
                 width: 40px;
             }
